--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "karma-phantomjs-launcher": "^1.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "author": "",
   "license": "ISC"
