--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt": "^0.4.5"
   },
   "devDependencies": {
+    "angular": "^1.5.3",
     "angular-mocks": "^1.4.9",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
