--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   "devDependencies": {
     "angular": "^1.5.3",
     "angular-mocks": "^1.4.9",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
+    "jshint": "^2.9.1",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.7",
